Scale animations on out-of-process iframes are slow
Categories
(Core :: Graphics: WebRender, defect)
Tracking
()
People
(Reporter: alexical, Assigned: alexical)
References
Details
(Keywords: perf)
Attachments
(2 files)
| Assignee | ||
Comment 1•4 years ago
•
|
||
Attaching a file which demos the issue. However, you need to have fission enabled, then open it as a file, but also have an http server serving its directory (to get it into a separate process). I.e., run python -m SimpleHTTPServer 8000 in Downloads or wherever it is, then just open it in your browser as a file:// URL.
| Assignee | ||
Comment 2•4 years ago
|
||
This actually does two things. One: it lets child stacking contexts inherit out
of process raster spaces by checking the parent stacking context's raster space
inside WR itself, and Two: it mirrors the logic in get_raster_space_for_prim
which undoes the device_pixel_scale for pinch zooms in order to get a
consistent glyph rasterization scale. This second thing won't affect the test
page linked in the bug, but it will affect the performance of, say, animating a
whole browser's scale, which is useful for reasons.
Comment 3•4 years ago
|
||
Setting status-firefox93=wontfix. I assume we don't need to uplift this fix to Beta 93 because Fission is disabled by default in 93.
Updated•4 years ago
|
Comment 5•4 years ago
|
||
| bugherder | ||
Updated•4 years ago
|
Comment 6•4 years ago
|
||
I've reproduced this bug using test.html file from comment 1, on macOS 11.
The issue is verified as fixed on latest Beta 94.0b6, under macOS 11 and Win 10 x64.
Description
•